# stm32-udp-client-rs

./: Cargo.toml  README.md
.cargo/: config.toml
src/: main.rs
